Fix: Series selector row alignment

--- a/packages/core/app/styles/navi-core/components/series-selector.less
+++ b/packages/core/app/styles/navi-core/components/series-selector.less
@@ -72,7 +72,7 @@
 
   .table-cell {
     display: flex;
-    flex: 0 1 auto;
+    flex: 1;
     min-width: 100px;
     overflow-wrap: break-word;
     padding: 0.5em 1em;
@@ -82,11 +82,9 @@
 
   .table-cell--icon {
     align-items: center;
-    align-items: center;
     box-sizing: content-box;
-    display: flex;
-    flex: 1 1 auto;
-    justify-content: flex-end;
+    flex: 0 1 auto;
+    font-size: 14px;
     min-width: unset;
     visibility: hidden;
   }
